# edgebook

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.agent/: AGENTS.md  CONTEXT.md
.agent/reviews/: TEMPLATE.md
.agent/skills/: CATALOG.md
.agent/skills/api-development/: SKILL.md
.agent/skills/database-migrations/: SKILL.md
.agent/skills/doc-writer/: SKILL.md
.agent/skills/end-session/: SKILL.md
.agent/skills/session-lifecycle/: SKILL.md
.agent/skills/start-session/: SKILL.md
.agent/tasks/: lessons.md
.agent/workflows/: health-check.md  release-checklist.md  test-ci.md  workflow-orchestration.md
.codex/: MAP.md  QUICKSTART.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
alembic/: env.py
alembic/versions/: 20260710_01_initial_ledger_and_cfb.py  20260711_02_manual_betting_flow.py  20260711_03_structured_reasoning_fields.py  20260711_04_alternative_market_lines.py  20260711_05_score_correction.py  20260711_06_sport_column.py  20260711_07_multi_source_ingestion_and_reviews.py  337ec2aab671_add_auth_users_table.py  e73c908b42db_add_production_odds_ingestion_operations.py
api/: index.html  openapi.json
architecture/adr/adr-0001-initial-architecture/: index.html
architecture/adr/adr-0001-template/: index.html
architecture/adr/adr-0002-application-orchestration/: index.html
architecture/ai_docs_organization_guide/: index.html
architecture/data_modeling/: index.html
architecture/decisions/template/: index.html
architecture/investment_adaptability_review/: index.html
architecture/system_overview/: index.html
config/editor/: settings.json
data/contracts/: index.html
data/dictionary/: index.html
data/processed/: fixture_feed.json
deployment/: index.html
development_guide/: index.html
docs/: ai_guide.md  ai_session_templates.md  checklists.md  deployment.md  development_guide.md  development_standards.md  getting_started.md  implementation_schedule.md  index.md  product_manual.md  project_brief.md  project_charter.md  runbook.md  security.md  troubleshooting.md
docs/api/: README.md  openapi.json  openapi.yaml
docs/architecture/: data_modeling.md  investment_adaptability_review.md  system_overview.md
docs/architecture/adr/: adr-0001-initial-architecture.md  adr-0002-application-orchestration.md
docs/data/: contracts.md  dictionary.md
docs/guides/: web_architecture.md
guides/web_architecture/: index.html
implementation_schedule/: index.html
knowledge_base/: index.html
product_manual/: index.html
runbook/: index.html
scripts/: backup_db.sh  cron_ingest.sh  docker_smoke.sh  generate_openapi.py  odds_api_smoke.py  restore_db.sh
search/: search_index.json
security/: index.html
session_logs/: README.md
session_logs/07-10-2026/: 1 - Project Initialization.md  2 - Ledger and CFB Intake.md  3 - Purge Template Deletions.md  4 - Rebrand Identity Docs.md  5 - Fix CI and Pyproject.md  6 - Session Wrap-Up.md
session_logs/07-11-2026/: 1 - Manual Betting Flow.md  10 - Phase 5 Review Operations.md  11 - Frontend UX Polish and Phase 5 Hardening.md  2 - Phase 2 and 3 Implementation.md  3 - Phase 1-3 Stabilization.md  4 - Multi-Source Ingestion and Review Workflow.md  5 - Session Wrap-Up.md  6 - Reconsideration and Reorganization.md  7 - Phase 4 Completion.md  8 - Phase 4 Delivery Hardening.md  9 - Phase 4B Odds Providers.md
session_logs/07-12-2026/: 1 - Phase 4C and Phase 6 Adaptability.md  2 - Phase 7 Authentication.md  3 - Phase 8 Kickoff.md
session_logs/07-13-2026/: 1 - Phase 8 Completion.md  2 - Phase 8 Verification.md
src/edgebook/: __init__.py  main.py
src/edgebook/analytics/: __init__.py  services.py
src/edgebook/api/: __init__.py  accounts.py  analytics.py  auth.py  cfb.py  ingestion.py  pages.py  reviews.py  wagering.py
src/edgebook/application/: __init__.py  operations.py
src/edgebook/auth/: cli.py  dependencies.py  models.py  services.py
src/edgebook/cfb/: __init__.py  models.py  services.py
src/edgebook/core/: config.py  database.py  money.py  templates.py
src/edgebook/ingestion/: __init__.py  adapters.py  cli.py  models.py  providers.py  scheduler.py  services.py
tests/: conftest.py  test_config.py  test_database.py  test_ingestion.py  test_migrations.py  test_openapi_contract.py  test_production_odds.py  test_provider_adapters.py
tests/api/: test_accounts.py  test_analytics.py  test_cfb.py  test_endpoints.py  test_ingestion_api.py  test_pages.py  test_reviews.py  test_wagering.py
tests/architecture/: __init__.py  test_application_operations.py  test_import_boundaries.py
tests/auth/: test_endpoints.py  test_services.py
tests/ledger/: __init__.py  test_services.py
tests/observability/: test_metrics.py  test_notifications.py
tests/utils/: test_logging.py  test_markdown_fetcher.py
troubleshooting/: index.html
(+40 files in other folders)
