[project]
name = "edgebook"
version = "0.1.0"
description = "A simulation-only college football paper-betting platform."
authors = [{ name = "Connor Kitchings", email = "connor.kitchings@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.12",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
]

# Optional: Add these as needed for your project
data-science = [
    "jupyter>=1.0",
    "nbstripout>=0.7.1",
    "nbformat>=5.10.4",
]

mlops = [
    "mlflow>=2.0",
    "prefect>=2.19.0",
    "openlineage-python>=1.15.0",
]

security = [
    "bandit>=1.7.9",
    "safety>=2.3.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=edgebook",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=55",
    "-v",
]

[tool.coverage.run]
source = ["src/edgebook"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
