[project]
name = "edgebook"
version = "0.1.0"
description = "A simulation-only college football paper-betting platform."
authors = [{ name = "Connor Kitchings", email = "connor.kitchings@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "prometheus-client>=0.25.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
    "mkdocstrings>=0.26",
    "mkdocstrings-python>=1.10",
]

security = [
    "bandit>=1.7.9",
    "safety>=2.3.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=edgebook",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["src/edgebook"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
